--- a/partials/soporte.html
+++ b/partials/soporte.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
 	
 <h1>Soporte</h1>
+<p>
+	Si tenés inconvenientes con el sistema por favor envianos un correo electrónico a <strong>televoxargentina@gmail.com</strong> <br>Te responderemos al instante. Gracias!
+</p>
 </div>
