--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
-	<div class="jumbotron">
-	  <h1>Whatsapp Turnos</h1>
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-	  <p><a class="btn btn-primary btn-lg" href="#/nuevo-turno" ui-sref="nuevo-turno" role="button">Nuevo turno</a></p>
-	</div>
+    <div class="jumbotron">
+        <h1>Whatsapp Turnos</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        <p>
+            <a class="btn btn-primary btn-lg" href="#/nuevo-turno" ui-sref="nuevo-turno" role="button">Nuevo turno</a>
+            <a class="btn btn-default btn-lg" href="#/turnos" ui-sref="turnos" role="button">Ver turnos</a>
+        </p>
+    </div>
 </div>
