--- a/partials/nuevo-turno.html
+++ b/partials/nuevo-turno.html
@@ -65,10 +65,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-md-6">
-            <input type="submit" value="Vaciar campos" class="btn btn-primary btn-block btn-lg" tabindex="9" ng-click="vaciar()">
+          <div class="col-xs-4 col-md-4">
+            <input type="submit" value="Vaciar campos" class="btn btn-default btn-block btn-lg" tabindex="9" ng-click="vaciar()">
           </div>
-          <div class="col-xs-6 col-md-6">
+          <div class="col-xs-8 col-md-8">
             <a href="javascript:void(0)" class="btn btn-success btn-block btn-lg" ng-click="agregarTurno(turno)">Agregar</a>
           </div>
         </div>
