--- a/partials/turnos.html
+++ b/partials/turnos.html
@@ -5,7 +5,7 @@
     		<tr>
     			<th><strong>Fecha/Hora</strong></th>
     			<th><strong>Mensaje</strong></th>
-    			<th colspan="150">Opciones</th>
+    			<th colspan="150">Copiar</th>
     		</tr>
     	</thead>
     	<tbody>
